--- a/js-numerals/numberconversion/package.json
+++ b/js-numerals/numberconversion/package.json
@@ -42,7 +42,10 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.10.0",
-    "eslint-plugin-react": "^7.29.3"
+    "eslint-plugin-react": "^7.29.3",
+    "react-test-renderer": "^17.0.2"
   }
 }
