--- a/js-numerals/numberconversion/package.json
+++ b/js-numerals/numberconversion/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -46,6 +47,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.10.0",
     "eslint-plugin-react": "^7.29.3",
+    "jest-react-hooks-shallow": "^1.5.1",
     "react-test-renderer": "^17.0.2"
   }
 }
