--- a/js-numerals/numberconversion/package.json
+++ b/js-numerals/numberconversion/package.json
@@ -43,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^7.0.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
     "eslint": "^8.10.0",
